syntax = "proto3";

package manman.v1;

option go_package = "github.com/whale-net/everything/manman/protos;manmanpb";

import "manman/protos/messages.proto";

// WrapperControl is the service that host managers use to control wrapper containers
service WrapperControl {
  // Start starts a game server container
  rpc Start(StartRequest) returns (StartResponse);
  
  // Stop stops a game server container gracefully
  rpc Stop(StopRequest) returns (StopResponse);
  
  // SendInput sends input to the game server process (stdin)
  rpc SendInput(SendInputRequest) returns (SendInputResponse);
  
  // GetStatus returns the current status of the wrapper and game server
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  
  // StreamOutput streams stdout/stderr from the game server
  rpc StreamOutput(StreamOutputRequest) returns (stream StreamOutputResponse);
}

// StartRequest contains the configuration needed to start a game server
message StartRequest {
  int64 session_id = 1;
  int64 sgc_id = 2;
  GameConfig game_config = 3;
  ServerGameConfig server_game_config = 4;
  string parameters = 5;  // JSON string with session-level parameter overrides
}

// StartResponse indicates whether the start was successful
message StartResponse {
  bool success = 1;
  string error_message = 2;  // Empty if success is true
  string container_id = 3;  // Docker container ID of the game server
}

// StopRequest requests that a game server be stopped
message StopRequest {
  int64 session_id = 1;
  bool force = 2;  // If true, kill immediately; if false, graceful shutdown
}

// StopResponse indicates whether the stop was successful
message StopResponse {
  bool success = 1;
  string error_message = 2;  // Empty if success is true
  int32 exit_code = 3;  // Exit code of the game server process
}

// SendInputRequest contains input to send to the game server
message SendInputRequest {
  int64 session_id = 1;
  bytes input = 2;  // Raw bytes to send to stdin
}

// SendInputResponse indicates whether the input was sent successfully
message SendInputResponse {
  bool success = 1;
  string error_message = 2;  // Empty if success is true
}

// GetStatusRequest requests the current status
message GetStatusRequest {
  int64 session_id = 1;
}

// GetStatusResponse contains the current status
message GetStatusResponse {
  string status = 1;  // "pending" | "starting" | "running" | "stopping" | "stopped" | "crashed"
  string container_id = 2;  // Docker container ID
  int32 exit_code = 3;  // Exit code if stopped/crashed
  bool is_running = 4;  // Whether the container is currently running
}

// StreamOutputRequest requests to stream output from the game server
message StreamOutputRequest {
  int64 session_id = 1;
  bool stdout = 2;  // Stream stdout
  bool stderr = 3;  // Stream stderr
}

// StreamOutputResponse contains a chunk of output
message StreamOutputResponse {
  bytes data = 1;  // Output data
  bool is_stderr = 2;  // Whether this is stderr (true) or stdout (false)
  bool eof = 3;  // End of stream indicator
}
